--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,23 @@
-lmdb==1.3.0
-matplotlib==3.5.3
-numpy==1.23.2
-opencv-python==4.6.0.66
-pandas==1.5.0
-Pillow==9.0.1
-scikit-learn==1.1.2
-scipy==1.9.1
-torch==1.13.0+cpu
-torchaudio==0.13.0+cpu
-torchvision==0.14.0+cpu
+certifi==2022.12.7
+charset-normalizer==2.1.1
+contourpy==1.0.6
+cycler==0.11.0
+fonttools==4.38.0
+idna==3.4
+kiwisolver==1.4.4
+matplotlib==3.6.2
+numpy==1.24.1
+opencv-python==4.7.0.68
+packaging==23.0
+pandas==1.5.2
+Pillow==9.4.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.7
+requests==2.28.1
+six==1.16.0
+torch==1.13.1+cpu
+torchaudio==0.13.1+cpu
+torchvision==0.14.1+cpu
+typing_extensions==4.4.0
+urllib3==1.26.13
